--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
-    "@types/jest": "25.2.3",
+    "@types/jest": "^24.0.18",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
@@ -47,10 +47,10 @@
     "eslint": "7.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "jest": "26.0.1",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
+    "ts-jest": "^24.1.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
